tests/baselines/reference/esDecorators-classDeclaration-exportModifier.errors.txt
file3.js(2,8): error TS1206: Decorators are not valid here.
file6.js(2,13): error TS8038: Decorators may not appear after 'export' or 'export default' if they also appear before 'export'.
file7.js(2,21): error TS8038: Decorators may not appear after 'export' or 'export default' if they also appear before 'export'.


==== global.js (0 errors) ====
    /** @type {*} */
    var dec;
    
==== file1.js (0 errors) ====
    // ok
    @dec export class C1 { }
    
==== file2.js (0 errors) ====
    // ok
    @dec export default class C2 {}
    
==== file3.js (1 errors) ====
    // error
    export @dec default class C3 {}
           ~~~~
!!! error TS1206: Decorators are not valid here.
    
==== file4.js (0 errors) ====
    // ok
    export @dec class C4 {}
    
==== file5.js (0 errors) ====
    // ok
    export default @dec class C5 {}
    
==== file6.js (1 errors) ====
    // error
    @dec export @dec class C6 {}
                ~~~~
!!! error TS8038: Decorators may not appear after 'export' or 'export default' if they also appear before 'export'.
!!! related TS1486 file6.js:2:1: Decorator used before 'export' here.
    
==== file7.js (1 errors) ====
    // error
    @dec export default @dec class C7 {}
                        ~~~~
!!! error TS8038: Decorators may not appear after 'export' or 'export default' if they also appear before 'export'.
!!! related TS1486 file7.js:2:1: Decorator used before 'export' here.
    